5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1715_3068.log
== TEST (2019-05-02 16:11:56) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
print(a)
if(a.upper()=="CIMITARRA"):
	s=2*c+2*b
	print(s)
elif(a.upper()=="KATANA"):
	s=2*c+b
	print(s)
elif(a.upper()=="SABRE"):
	s=c+2*b
	print(s)
-- OUTPUT:
SABRE
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:12:56) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
print(a)
if(a.upper()=="CIMITARRA"):
	s=2*c+2*b
	print(s)
elif(a.upper()=="KATANA"):
	s=2*c+b
	print(s)
elif(a.upper()=="SABRE"):
	s=c+2*b
	print(s)
-- OUTPUT:
SABRE
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:22) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input"dano: ")
if(a.upper()=="CIMITARRA"):
	d=2*c+2*b
	print(d)
elif(a.upper()=="KATANA"):
	d=2*c+b
	print(d)
elif(a.upper()=="SABRE"):
	d=c+2*b
	print(d)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 4
    d=int(input"dano: ")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:40) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input("dano: "))
if(a.upper()=="CIMITARRA"):
	d=2*c+2*b
	print(d)
elif(a.upper()=="KATANA"):
	d=2*c+b
	print(d)
elif(a.upper()=="SABRE"):
	d=c+2*b
	print(d)
else:
	print("Entrada invalida")
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:25) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input("dano: "))
if(a.upper()=="CIMITARRA"):
	d=2*c+2*b
	print(d)
elif(a.upper()=="KATANA"):
	d=2*c+b
	print(d)
elif(a.upper()=="SABRE"):
	d=c+2*b
	print(d)
else:
	print("Entrada invalida")
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:23:03) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input("dano: "))
if(a.upper()=="CIMITARRA"):
	d=2*c+2*b
	print(d)
elif(a.upper()=="KATANA"):
	d=2*c+b
	print(d)
elif(a.upper()=="SABRE"):
	d=c+2*b
	print(d)
else:
	print("Entrada invalida")
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:24:15) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input("dano: "))
if(a.upper()=="CIMITARRA"):
	d=2*c+2*b
	print(d)
elif(a.upper()=="KATANA"):
	d=2*c+b
	print(d)
elif(a.upper()=="SABRE"):
	d=c+2*b
	print(d)
else:
	print("Entrada invalida")
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:15) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input("dano: "))
if(a.upper()=="CIMITARRA"):
	d=2*(c+c)+2*b
	print(d)
elif(a.upper()=="KATANA"):
	d=2*(c+c)+b
	print(d)
elif(a.upper()=="SABRE"):
	d=(c+c)+2*b
	print(d)
else:
	print("Entrada invalida")
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:29) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input("dano: "))
if(a.upper()=="CIMITARRA"):
	d=2*c+2*b
	print(d)
elif(a.upper()=="KATANA"):
	d=2*c+b
	print(d)
elif(a.upper()=="SABRE"):
	d=c+2*b
	print(d)
else:
	print("Entrada invalida")
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:43) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input("dano: "))
if(a.upper()=="CIMITARRA"):
	d=2*c+2*b
	print(d)
elif(a.upper()=="KATANA"):
	d=2*c+b
	print(d)
elif(a.upper()=="SABRE"):
	d=c+2*b
	print(d)
else:
	print("Entrada invalida")
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:35) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input("dano: "))
if(b>10 and c>0):
	if(a.upper()=="CIMITARRA"):
		d=2*c+2*b
		print(d)
	elif(a.upper()=="KATANA"):
		d=2*c+b
		print(d)
	elif(a.upper()=="SABRE"):
		d=c+2*b
		print(d)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:46) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input("dano: "))
if(b>0 and c<=0):
	if(a.upper()=="CIMITARRA"):
		d=2*c+2*b
		print(d)
	elif(a.upper()=="KATANA"):
		d=2*c+b
		print(d)
	elif(a.upper()=="SABRE"):
		d=c+2*b
		print(d)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:46) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input("dano: "))
if(c>2 and c>20):
	if(a.upper()=="CIMITARRA"):
		d=2*c+2*b
		print(d)
	elif(a.upper()=="KATANA"):
		d=2*c+b
		print(d)
	elif(a.upper()=="SABRE"):
		d=c+2*b
		print(d)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:12:56) 
-- CODE:
a=input("nome da arma: ")
b=int(input("destreza: "))
c=int(input("valores sorteados: "))
d=int(input("dano: "))
if(c>2 and c>20):
	if(a.upper()=="CIMITARRA"):
		d=2*c+2*b
		print(d)
	elif(a.upper()=="KATANA"):
		d=2*c+b
		print(d)
	elif(a.upper()=="SABRE"):
		d=c+2*b
		print(d)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
